[gd_scene load_steps=48 format=3 uid="uid://bd8kdu2u11e3m"]

[ext_resource type="Texture2D" uid="uid://c1kxuiuo2xt7e" path="res://Assets/Skull/Idle 1 (52x54).png" id="1_dfsi8"]
[ext_resource type="Texture2D" uid="uid://b24kcd8lqcpt2" path="res://Assets/Skull/Hit Wall 2 (52x54).png" id="2_c43u6"]
[ext_resource type="Texture2D" uid="uid://hjouomhmxl0j" path="res://Assets/Skull/Hit (52x54).png" id="3_eckcw"]
[ext_resource type="Texture2D" uid="uid://ctj6l75k78wqe" path="res://Assets/Skull/Idle 2 (52x54).png" id="4_jtkq8"]
[ext_resource type="Texture2D" uid="uid://nn0ge6sjsvum" path="res://Assets/Skull/Hit Wall 1 (52x54).png" id="5_m1abm"]
[ext_resource type="Script" uid="uid://qm4suuhookyc" path="res://Scripts/skull_enemy.gd" id="6_c43u6"]
[ext_resource type="PackedScene" uid="uid://d37vkk72w43ie" path="res://Scenes/hitbox.tscn" id="7_eckcw"]
[ext_resource type="PackedScene" uid="uid://bko0phuj3etyn" path="res://Scenes/hurtbox.tscn" id="8_jtkq8"]
[ext_resource type="Texture2D" uid="uid://c07nmd1dw1olg" path="res://Assets/Traps/light.webp" id="9_m1abm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cot7d"]
atlas = ExtResource("1_dfsi8")
region = Rect2(0, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_685t1"]
atlas = ExtResource("1_dfsi8")
region = Rect2(52, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_wor5v"]
atlas = ExtResource("1_dfsi8")
region = Rect2(104, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_pau3o"]
atlas = ExtResource("1_dfsi8")
region = Rect2(156, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_x41ch"]
atlas = ExtResource("1_dfsi8")
region = Rect2(208, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd2fm"]
atlas = ExtResource("1_dfsi8")
region = Rect2(260, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_iybn5"]
atlas = ExtResource("1_dfsi8")
region = Rect2(312, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3hqh"]
atlas = ExtResource("1_dfsi8")
region = Rect2(364, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssrg4"]
atlas = ExtResource("2_c43u6")
region = Rect2(0, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpmor"]
atlas = ExtResource("2_c43u6")
region = Rect2(52, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_627mg"]
atlas = ExtResource("2_c43u6")
region = Rect2(104, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4uto"]
atlas = ExtResource("2_c43u6")
region = Rect2(156, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_nm8mx"]
atlas = ExtResource("2_c43u6")
region = Rect2(208, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m6ud"]
atlas = ExtResource("2_c43u6")
region = Rect2(260, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xkny"]
atlas = ExtResource("2_c43u6")
region = Rect2(312, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6gi7"]
atlas = ExtResource("3_eckcw")
region = Rect2(0, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx8c3"]
atlas = ExtResource("3_eckcw")
region = Rect2(52, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig2if"]
atlas = ExtResource("3_eckcw")
region = Rect2(104, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgt86"]
atlas = ExtResource("3_eckcw")
region = Rect2(156, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_in55l"]
atlas = ExtResource("3_eckcw")
region = Rect2(208, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlg48"]
atlas = ExtResource("4_jtkq8")
region = Rect2(0, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag6y5"]
atlas = ExtResource("4_jtkq8")
region = Rect2(52, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_73x8l"]
atlas = ExtResource("4_jtkq8")
region = Rect2(104, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_qb8ue"]
atlas = ExtResource("4_jtkq8")
region = Rect2(156, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_60k2x"]
atlas = ExtResource("4_jtkq8")
region = Rect2(208, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_do2aq"]
atlas = ExtResource("4_jtkq8")
region = Rect2(260, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wvjo"]
atlas = ExtResource("4_jtkq8")
region = Rect2(312, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_40a1h"]
atlas = ExtResource("4_jtkq8")
region = Rect2(364, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_54o1g"]
atlas = ExtResource("5_m1abm")
region = Rect2(0, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxf5e"]
atlas = ExtResource("5_m1abm")
region = Rect2(52, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtg5w"]
atlas = ExtResource("5_m1abm")
region = Rect2(104, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oehd"]
atlas = ExtResource("5_m1abm")
region = Rect2(156, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr1qe"]
atlas = ExtResource("5_m1abm")
region = Rect2(208, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5nyj"]
atlas = ExtResource("5_m1abm")
region = Rect2(260, 0, 52, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uqal"]
atlas = ExtResource("5_m1abm")
region = Rect2(312, 0, 52, 54)

[sub_resource type="SpriteFrames" id="SpriteFrames_jpocj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cot7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_685t1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wor5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pau3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x41ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd2fm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iybn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3hqh")
}],
"loop": true,
"name": &"angry_idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssrg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpmor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_627mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4uto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nm8mx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m6ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xkny")
}],
"loop": false,
"name": &"angry_wall_hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6gi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx8c3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig2if")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgt86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_in55l")
}],
"loop": false,
"name": &"hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlg48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag6y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73x8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qb8ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60k2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_do2aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wvjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40a1h")
}],
"loop": true,
"name": &"normal_idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_54o1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxf5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtg5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oehd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr1qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5nyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uqal")
}],
"loop": false,
"name": &"normal_wall_hit",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_eckcw"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_m1abm"]
radius = 16.0

[node name="Skull Enemy" type="AnimatedSprite2D"]
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_jpocj")
animation = &"normal_wall_hit"
autoplay = "normal_idle"
script = ExtResource("6_c43u6")

[node name="UpperWallCast" type="RayCast2D" parent="."]
target_position = Vector2(0, -12)

[node name="LowerWallCast" type="RayCast2D" parent="."]
rotation = 3.14159
target_position = Vector2(-1.2822e-06, -14.6667)

[node name="Hitbox" parent="." instance=ExtResource("7_eckcw")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_eckcw")
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource("8_jtkq8")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_m1abm")

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.25
shadow_enabled = true
texture = ExtResource("9_m1abm")
texture_scale = 0.5

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
